--- a/styles/temples.css
+++ b/styles/temples.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
-
 * {
     box-sizing: border-box;
     margin: 0;
@@ -89,7 +87,7 @@ main {
 main h2 {
     text-align: center;
     margin-bottom: 1.5rem;
-    color: #4A148C; 
+    color: #000000; 
     font-size: 2rem;
 }
 
